--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.1/typed.min.js'></script>
 
 <link type="text/css" rel="stylesheet" href="/static/css/home.css">
-<script type="text/javascript" src="{{ url_for('static', filename = 'js/home.js') }}"></script>
+<script src="/static/js/home.js"></script>
 {% endblock %}
 
 {% block body %}
