finally fix ity

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -215,7 +215,7 @@ ul li a {
   letter-spacing: 0.002em;
   padding-right: 2px;
 }
-#terminal .terminal .caret {
+#terminal .terminal .andrew {
   color: #50cd70;
 }
 #terminal .message {
