--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,19 +3,41 @@ body {
   font-family:  'Open Sans', sans-serif;
 }
 
-.navbar-ref {
-  color: #808080;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
+nav {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top:0;
+  box-shadow: 0 0 40px 5px rgba(0,0,0,0.5);
+  font-family: Inter, Thonburi, Arial, Helvetica, sans-serif
 }
 
-.navbar-ul {
-  background-color: white;
-  display: flex;
-  justify-content: flex-end;
-  width: 10%;
+nav ul {
+  list-style-type: none;
+  margin:0;
+  margin-right: 40px;
 }
 
+nav ul li, nav a {
+  float: right;
+  display: inline;
+  padding: 24px 28px;
+  font-size: 20px;
+  cursor: pointer;
+  border-bottom: 2px solid rgba(0, 0, 0, 0);
+  transition: 0.4s;
+}
+
+nav a {
+  float: left;
+  margin-left: 40px;
+}
+
+nav ul li:hover {
+  border-bottom: 2px solid black;
+  opacity:0.9;
+}
+  
 .list-inline {
   display: flex;
   text-decoration: none;
