--- a/templates/base.html
+++ b/templates/base.html
@@ -18,12 +18,14 @@
 </head>
 <body>
 <div class="navbar-ul">
-  <ul id="navbar-list" class="list-inline">
-    <li><a class="navbar-ref" href="/">Home</a></li>
-    <li><a class="navbar-ref" href="/">Timeline</a></li>
-    <li><a class="navbar-ref" href="/">Projects</a></li>
-    
-    </ul>
+    <nav>
+        <a>Andrew Nijmeh</a>
+        <ul>
+            <li>Home</li>
+            <li>Timeline</li>
+            <li>Projects</li>
+        </ul>
+    </nav>
 </div>
 {% block body %}
 {% endblock %}
