--- a/templates/base.html
+++ b/templates/base.html
@@ -21,9 +21,9 @@
     <nav>
         <a>Andrew Nijmeh</a>
         <ul>
-            <li>Home</li>
-            <li>Timeline</li>
-            <li>Projects</li>
+            <li>Home</a></li>
+            <li>Projects</a></li>
+            <li>Timeline</a></li>
         </ul>
     </nav>
 </div>
