--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -19,7 +19,19 @@
             <i class="tiny material-icons">School</i>
             <a href="/timeline" class="title">[life] Working out/Exercise</a>
           </div>
+          <span class="content">Pog
+          </span>
         </li>
+        <li>
+          <div class="icon-title">
+            <i class="tiny-material-icons">Education</i>
+            <a href="/timeline" class="title">[edu] AWS Developer Associate</a>
+          </div>
+          <span class="content">I am studying for the AWS Developer Associate via a course I found.
+            So far I have been studying this for almost 1 month!
+          </span>
+        </li>
+        
       </ul>
     </div>
   </div>
